[gd_scene load_steps=2 format=3 uid="uid://t5m374m3xq46"]

[ext_resource type="Script" path="res://node_2d.gd" id="2_ljg5d"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Node2D" type="Node2D" parent="."]
script = ExtResource("2_ljg5d")

[node name="TextLabel" type="Label" parent="Node2D"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 50

[node name="ImageSprite" type="Sprite2D" parent="Node2D"]

[node name="QuizTimer" type="Timer" parent="Node2D"]

[node name="ButtonContainer" type="VBoxContainer" parent="Node2D"]
offset_right = 40.0
offset_bottom = 40.0

[node name="OptionButton1" type="Button" parent="Node2D/ButtonContainer"]
layout_mode = 2

[node name="OptionButton2" type="Button" parent="Node2D/ButtonContainer"]
layout_mode = 2

[node name="OptionButton3" type="Button" parent="Node2D/ButtonContainer"]
layout_mode = 2

[node name="OptionButton4" type="Button" parent="Node2D/ButtonContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1071.0
offset_bottom = 1930.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
